<?xml version="1.0"?>
<package format="2">
  <name>topsens_explorer</name>
  <version>1.8.1</version>
  <description>The topsens_explorer package</description>
  <maintainer email="service@topsens.cn">Topsens</maintainer>  
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
</package>
